Fix contrast errors (#2066)
* Fix contrast errors

* Improve contrast of deleted item links

* Strike through deleted item links

--- a/static/css/sass/cdr_homepage.scss
+++ b/static/css/sass/cdr_homepage.scss
@@ -171,7 +171,7 @@ body {
     line-height: 1.5;
   }
   a.button {
-    background-color: $unc-blue;
+    background-color: $unc-navy;
   }
 }
 
